@@ -5,13 +5,14 @@ Next version:
 
 2.6 (????-??-??)
 
+* support ebook table of contents in ebook UI as well
 * swapped keybindings:
   * F11 : Fullscreen mode (still also Ctrl+Shift+L)
   * F5  : Presentation mode (also Shift+F11, still also Ctrl+L)
 * deprecated the browser plugin (remains installed if used)
 * support LZMA in Comic Book (CBZ) files
-* new advanced settings: UseTabs (to be exposed eventually), ShowSingleTab, FullPathInTitle
 * allow saving Comic Book files as PDF
+* new advanced settings: UseTabs (to be exposed eventually), ShowSingleTab, FullPathInTitle
 
 2.5.2 (2014-05-13)
 
